--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "type": "git",
     "url": "git+https://github.com/Angry-Hamster/goit-react-hw-03-phonebook"
   },
-  "homepage": "https://github.com/Angry-Hamster/goit-react-hw-03-phonebook",
+  "homepage": "https://angry-hamster.github.io/goit-react-hw-03-phonebook/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
